# napari-skeleton-curator

./: .gitignore  LICENSE  README.md  control 1.lsm-C3-MAX.tiff  requirements.txt  setup.cfg  setup.py  tox.ini
examples/: data.csv  skeleton.py  skeleton_plugin.py
napari_skeleton_curator/: __init__.py  _hook_impl.py  napari.yaml  qt_skeleton_curator.py  qt_skeleton_pruner.py  utils.py
napari_skeleton_curator/_tests/: test_dock_widget.py
