[metadata]
name = napari-skeleton-curator
author = Marlene Da Vitoria Lobo and Kevin Yamauchi
author_email = kevin.yamauchi@gmail.com
license = BSD-3
url = https://github.com/kevinyamauchi/napari-skeleton-curator
description = a simple plugin to curate skeletons
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Framework :: napari
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
project_urls = 
	Bug Tracker = https://github.com/kevinyamauchi/napari-skeleton-curator/issues
	Documentation = 'https://github.com/kevinyamauchi/napari-skeleton-curator#README.md'
	Source Code = https://github.com/kevinyamauchi/napari-skeleton-curator
	User Support = https://github.com/kevinyamauchi/napari-skeleton-curator/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
	napari-plugin-engine>=0.1.4
	numpy
	skan>=0.10.0

[options.entry_points]
napari.manifest = 
	napari-skeleton-curator = napari_skeleton_curator:napari.yaml

[options.package_data]
napari_skeleton_curator = napari.yaml

